  (Paul McArthur)

* SOLR-17213: Fix spurious warnings about solr url format in Solr CLI when users aren't providing a deprecated solr url.  (Eric Pugh)

* SOLR-17176: Fix log history V2 API serialization (Michael Gibney)

* SOLR-11535: Fix race condition in singleton-per-collection StateWatcher creation (Michael Gibney)

Dependency Upgrades
---------------------

* SOLR-17157: Upgrade Lucene to 9.10.0 (hossman, Christine Poerschke)

* SOLR-17214: Update forbiddenapis to 3.7 (hossman)

* GITHUB#2408: Update commons-cli to 1.7 (Eric Pugh)

Other Changes
---------------------
* SOLR-17126: Cut over System.getProperty to EnvUtils.getProperty (janhoy)

* SOLR-17066: GenericSolrRequest now has a `setRequiresCollection` setter that allows it to specify whether
  it should make use of the client-level default collection/core. (Jason Gerlowski)

* SOLR-17190: Replace org.apache.solr.util.LongSet with hppc LongHashSet (Michael Gibney)

* SOLR-12089: Update FileBasedSpellChecker and IndexBasedSpellChecker to accept accuracy parameter
  as float; deprecate `breakSugestionTieBreaker` parameter in favor of `breakSuggestionTieBreaker`
  in WordBreakSolrSpellChecker (Andrey Bozhko via Eric Pugh)

* SOLR-17201: Http2SolrClient and friends no longer marked as @lucene.experimental.
  Krb5HttpClientBuilder and PreemptiveBasicAuthClientBuilderFactory no longer deprecated (janhoy)

* SOLR-17217: Simplify verbose MatcherAssert.assertThat usage in tests (hossman)

* SOLR-17232: PropertiesOutputStream is renamed IndexOutputOutputStream and overrides write(byte[], int, int).
  (Bruno Roustant)

* SOLR-17222: QueryResponseWriterUtil.NonFlushingStream should support bulk write methods (Michael Gibney)

==================  9.5.0 ==================
New Features
---------------------
* SOLR-17006: Collection creation & adding replicas: User-defined properties are persisted to state.json and